--- a/financial_management_proj/requirements.txt
+++ b/financial_management_proj/requirements.txt
@@ -5,6 +5,8 @@ django-environ==0.11.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
+gunicorn==21.2.0
+importlib-metadata==6.7.0
 inflection==0.5.1
 packaging==23.2
 psycopg2==2.9.9
@@ -14,3 +16,4 @@ PyYAML==6.0.1
 sqlparse==0.4.4
 typing_extensions==4.7.1
 uritemplate==4.1.1
+zipp==3.15.0
